--- a/student-profiles/src/styles.css
+++ b/student-profiles/src/styles.css
@@ -1,30 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 .App {
+  font-family: 'Raleway', sans-serif;
   text-align: center;
 }
 
 .studentCard {
   display: flex;
   flex-direction: row;
-  margin: 15px;
+  border-bottom: solid 1px lightgrey;
 }
 
 img {
-  width: 100px;
-  height: 100px;
+  margin-left: 25px;
+  width: 150px;
+  height: 150px;
   border: solid 1px lightgrey;
   border-radius: 75px;
 }
 
 .studentName {
   font-size: 40px;
-  padding: 0px;
+  font-weight:bold;
+  padding-left: 10px;
 }
 
 .studentInfo {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 10px;
+  margin: 15px;
 
 }
 
