--- a/student-profiles/src/styles.css
+++ b/student-profiles/src/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;700&display=swap');
 
 .App {
   font-family: 'Raleway', sans-serif;
@@ -12,7 +12,7 @@
 }
 
 img {
-  margin-left: 25px;
+  margin: 25px;
   width: 150px;
   height: 150px;
   border: solid 1px lightgrey;
@@ -22,14 +22,13 @@ img {
 .studentName {
   font-size: 40px;
   font-weight:bold;
-  padding-left: 10px;
 }
 
 .studentInfo {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 15px;
+  margin: 10px;
 
 }
 
@@ -37,6 +36,7 @@ img {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 10px;
-  padding-left: 20px;
+  margin: 10px 10px 0px 10px;
+  line-height: 25px;
+  padding-left: 10px;
 }
