--- a/student-profiles/src/styles.css
+++ b/student-profiles/src/styles.css
@@ -5,6 +5,17 @@
   text-align: center;
 }
 
+input {
+  width: 100%;
+  height: 60px;
+  font-family: 'Raleway', sans-serif;
+  padding: 20px;
+  font-size: 30px;
+  color: lightgrey;
+  border: none;
+  border-bottom: solid lightgrey 1px;
+}
+
 .studentCard {
   display: flex;
   flex-direction: row;
